--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "d3": "^6.2.0",
+    "dom-to-image": "^2.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "file-saver": "^2.0.5",
     "geojson-to-svg": "^1.1.4",
     "google-map-react": "^2.1.10",
     "mobx": "^6.3.5",
