--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "google-map-react": "^2.1.10",
     "mobx": "^6.3.5",
     "mobx-react": "^7.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-analytics-charts": "^1.2.12",
     "react-bootstrap": "^2.0.1",
@@ -34,6 +35,7 @@
     "react-google-charts": "^3.0.15",
     "react-hook-form": "^7.20.2",
     "react-js-pagination": "^3.0.3",
+    "react-modal": "^3.14.4",
     "react-naver-maps": "0.0.13",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
